<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_arrow_open" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ic_Customer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/booking_clientName_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:layout_toRightOf="@+id/ic_Customer"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/ClientName"
            android:textColor="@color/app_theme_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/booking_clientLocation_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booking_clientName_TV"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/ic_Customer"
            android:fontFamily="@font/roboto_regular"
            android:maxLines="1"
            android:text="@string/Location"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/booking_clientContact_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booking_clientLocation_TV"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/ic_Customer"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/ContactNumber"
            android:textSize="14sp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/lineDividerHorizontal"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/booking_clientContact_TV"
            android:layout_marginTop="4dp"
            app:dividerColor="@color/line_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_below="@id/booking_clientContact_TV"
            android:layout_marginTop="4dp">

            <ImageView
                android:id="@+id/clockId"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_baseline_access_time_24" />

            <TextView
                android:id="@+id/booking_clientSchedule_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/clockId"
                android:fontFamily="@font/roboto_medium"
                android:singleLine="true"
                android:text="03-12-2022 09:00:00"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>





