<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="5dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/container_border"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/booking_clientImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/booking_service_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_toRightOf="@+id/booking_clientImageView"
            android:fontFamily="@font/quicsandmed"
            android:text="Customer Details"
            android:textColor="@color/app_theme_blue"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/booking_clientName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/booking_service_label"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/booking_clientImageView"
            android:fontFamily="@font/quicsandmed"
            android:text="Client Name:"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/booking_clientName_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booking_service_label"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/booking_clientName_label"
            android:fontFamily="@font/quicksandreg"
            android:text="@string/ClientName"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/booking_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booking_clientName_TV"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/booking_clientImageView"
            android:fontFamily="@font/quicsandmed"
            android:text="Location:"
            android:textSize="14sp"
             />

        <TextView
            android:id="@+id/booking_clientLocation_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booking_clientName_TV"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/booking_location_label"
            android:fontFamily="@font/quicksandreg"
            android:text="@string/Location"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/booking_contact_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booking_location_label"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/booking_clientImageView"
            android:fontFamily="@font/quicsandmed"
            android:text="Contact Number:"
            android:textSize="14sp"
             />

        <TextView
            android:id="@+id/booking_clientContact_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booking_clientLocation_TV"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/booking_contact_label"
            android:fontFamily="@font/quicksandreg"
            android:text="@string/ContactNumber"
            android:textSize="14sp" />
    </RelativeLayout>

    //Sample comment comment


</androidx.cardview.widget.CardView>





